--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl_phone_field:
+  firebase_core:
+  cloud_firestore:
+  firebase_auth:
   
 
 dev_dependencies:
