--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,16 @@ dependencies:
   firebase_core:
   cloud_firestore:
   firebase_auth:
+  firebase_messaging:
+  fluttertoast:
+  uuid:  
+  shared_preferences:
+  google_sign_in: 
+  flutter_datetime_picker:
+  
+  
+ 
+  
   
 
 dev_dependencies:
